@@ -1,0 +1,4 @@
+shader test(float myparam = 1.0)
+{
+    printf ("myparam = %g\n", myparam);
+}
